Fix up background overlapping

--- a/source/design/scss/global.scss
+++ b/source/design/scss/global.scss
@@ -35,6 +35,7 @@ $btn-pledge-border:             $base-color;
 
 .container {
 	margin-bottom: 85px;
+	background-color: $body-bg;
 }
 
 body {
